---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 10
  l: "terraform {\n"
  m: ^^^^^^^^^^^^^
- n: 11
  l: "  required_version = \">= 1.0.0\"\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 12
  l: "  required_providers {\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^
- n: 13
  l: "    aws = {\n"
  m: ^^^^^^^^^^^^^
- n: 14
  l: "      source  = \"hashicorp/aws\"\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 15
  l: "      version = \"~> 4.0\"\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 16
  l: "    }\n"
  m: ^^^^^^^
- n: 17
  l: "    github = {\n"
  m: ^^^^^^^^^^^^^^^^
- n: 18
  l: "      source  = \"integrations/github\"\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 19
  l: "      version = \"~> 5.32.0\"\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 20
  l: "    }\n"
  m: ^^^^^^^
- n: 21
  l: "  }\n"
  m: ^^^^^
- n: 22
  l: "  backend \"s3\" {\n"
  m: ^^^^^^^^^^^^^^^^^^^^
- n: 23
  l: "    bucket = \"my-terraform-state\"\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 24
  l: "    key    = \"test-app/terraform.tfstate\"\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 25
  l: "    region = \"us-west-2\"\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 26
  l: "  }\n"
  m: ^^^^^
- n: 27
  l: "}\n"
  m: "^  "
